<resources>
    <string name="app_name">MarketApp</string>
    <string name="e_mail">e-mail</string>
    <string name="passwort">Passwort</string>
    <string name="login">Login</string>
    <string name="registrieren">Registrieren</string>
    <string name="logo">logo</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="wo_m_chten_sie_einkaufen">Wo möchten Sie einkaufen?</string>
    <string name="stadt">... Stadt</string>
    <string name="anmelden">Anmelden</string>
    <string name="loginbtn">TODO</string>


</resources>